# biocommons.example

./: .deepsource.toml  .flake8  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  TODO  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyproject.toml-1  setup.cfg  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json  packages.txt  postCreateCommand.sh
.devcontainer/default/: devcontainer.json
.github/: labels.yml
.github/ISSUE_TEMPLATE/: project-propposal.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: check.yaml  ci-cd.yml  labels.yml  main.yml  on-release-main.yml  python-ci-cd.yml  python-package.yml  stale.yml  validate-codecov-config.yml
docs/: index.md  modules.md
modules/: index.html
orig/: Makefile
orig2/: Makefile  pyproject.toml
sbin/: makefile-extract-documentation  rename-package
search/: search_index.json
src/biocommons/example/: __init__.py  __main__.py  marvin.py  marvin_adjacent_test.py  quotes.yaml  testfile.py
src/biocommons/example/test/: marvin_subdir_test.py
src/biocommons/example/tests/: __init__.py  conftest.py  marvin_subdir_test.py
src/marvinquote/: __init__.py  __main__.py  marvin.py
tests/: test_example.py  test_foo.py  test_marvin.py  test_marvinquote.py
