[metadata]
name = marvinquote
description = Marvin Quote Package
long_description = file: README.rst
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    pyyaml
    
[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    marvin-quote = marvinquote.__main__:main

[options.extras_require]
dev =
    black
    build
    ipython
    isort
    pytest
    pytest-cov
    tox

[options.packages.find]
where = src