[metadata]
name = biocommons.example
description = biocommons example package
long_description = file: README.md
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    coloredlogs
    pyyaml
    
[options.package_data]
* = *.gz, *.json, *.yaml

[options.entry_points]
console_scripts =
    marvin-quote = biocommons.example.__main__:main

[options.extras_require]
dev =
    black
    build
    ipython
    isort
    pytest
    pytest-cov
    tox

[options.packages.find]
where = src
