[options]
zip_safe = True
include_package_data = True
packages = find_namespace:
package_dir =
    =src
install_requires =
    coloredlogs~=15.0
    pyyaml~=6.0

[options.packages.find]
where = src
    
[options.package_data]
* = *.gz, *.json, *.yaml

[options.entry_points]
console_scripts =
    marvin-quote = biocommons.example.__main__:main

[options.extras_require]
dev =
    bandit~=1.7
    black~=22.3
    build~=0.8
    flake8~=4.0
    ipython~=8.4
    isort~=5.10
    mypy
    pylint~=2.14
    pytest~=7.1
    pytest-cov~=3.0
    tox~=3.25

[flake8]
ignore = E203,E266,H106,H904,E133
#max-line-length = 120
max-complexity = 25
hang-closing = true
